--- a/index/index.html
+++ b/index/index.html
@@ -2,16 +2,17 @@
 <html>
   <head>
     <title>WELCOME!</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <header>
         <div>
             <ul >
-                <li><a href="/index/index.html">Home</a></li>
-                <li><a href="/index/about.html">Aboutus</a></li>
-                <li><a href="/index/contact.html">Contact</a></li>
-                <li><a href="/index/service.html">Service</a></li>
+              <li><a href="../index/index.html">Home</a></li>
+              <li><a href="../index/about.html">Aboutus</a></li>
+              <li><a href="../index/contact.html">Contact</a></li>
+              <li><a href="../index/service.html">Service</a></li>
+
                 <!-- <li><a href="#">Help</a></li> -->
              </ul>
         </div>
